# zero2prod

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.template.yaml  diesel.toml
bench/: README.md  healthz.lua  subcribe.lua
conf/: template.yaml
migrations/2025-06-19-210452_create_subscriptions/: down.sql  up.sql
scripts/: init_db.sh
src/: config.rs  db.rs  errors.rs  lib.rs  main.rs  models.rs  pool.rs  request.rs  schema.rs  telemetry.rs
tests/: health_check.rs  subscribe.rs  utils.rs
