[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.11.0"
chrono = { version = "0.4.41", features = ["serde"] }
chrono-tz = "0.10.3"
config = "0.15.11"
deadpool = "0.12.2"
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
diesel = { version = "2.2.10", features = ["chrono", "postgres", "uuid"] }
diesel_cli = { version = "2.2.10", optional = true, features = ["postgres"], default-features = false }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.41", default-features = false, features = ["log"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
url = "2.5.4"
uuid = { version = "1.17.0", features = ["serde", "v4"], default-features = false }

[dev-dependencies]
function_name = { version = "0.3.0" }
reqwest = { version = "0.12.19", features = ["json"] }
testcontainers-modules = { version = "0.12.1", features = ["postgres"] }

[features]
dev = ["dep:diesel_cli"]
